<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/register_title"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/register_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/register_username"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/editTextRegisterUsername"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextRegisterConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/editTextRegisterPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/register_rePassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_Register"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/editTextRegisterConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register_button"
        android:textSize="20sp"
        android:backgroundTint="#d3cec3"/>

</RelativeLayout>