<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/text_title"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button_login"
        android:textSize="20sp"
        android:backgroundTint="#d3cec3"/>

    <Button
        android:id="@+id/Register_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button_register"
        android:textSize="20sp"
        android:backgroundTint="#d3cec3"
        />

</RelativeLayout>